--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/languages/jeecms_tpl/messages_zh_CN.properties
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/languages/jeecms_tpl/messages_zh_CN.properties
@@ -1,7 +1,5 @@
 tagStr.split=\uff0c
-
-
 tpl.index=\u9996\u9875
 tpl.movie.list=\u5217\u8868\u9875
+tpl.movie.detail=\u8be6\u60c5\u9875
 tpl.movie.tag=\u6807\u7b7e\u9875
-
