--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/languages/jeecms_tpl/messages_zh_CN.properties
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/languages/jeecms_tpl/messages_zh_CN.properties
@@ -3,3 +3,5 @@ tpl.index=\u9996\u9875
 tpl.movie.list=\u5217\u8868\u9875
 tpl.movie.detail=\u8be6\u60c5\u9875
 tpl.movie.tag=\u6807\u7b7e\u9875
+tpl.searchInput=\u641c\u7d22\u8f93\u5165\u9875
+tpl.searchResult=\u641c\u7d22\u7ed3\u679c\u9875
