--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/languages/jeecms_tpl/messages_zh_CN.properties
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/languages/jeecms_tpl/messages_zh_CN.properties
@@ -5,3 +5,6 @@ tpl.movie.detail=\u8be6\u60c5\u9875
 tpl.movie.tag=\u6807\u7b7e\u9875
 tpl.searchInput=\u641c\u7d22\u8f93\u5165\u9875
 tpl.searchResult=\u641c\u7d22\u7ed3\u679c\u9875
+
+tpl.member.regist=\u6ce8\u518c
+tpl.member.login=\u767b\u5f55
